basic changes are added

--- a/AngularWelcome/angular.json
+++ b/AngularWelcome/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "AngularWelcome"
+    }
+  },
+  "defaultProject": "AngularWelcome",
+  "cli": {
+    "analytics": false
+  }
 }
